# mini-agent

./: .env.example  .gitignore  README.md  cli.py  gateway.py  gateway.yaml.example  mcp_server.py  pyproject.toml
docs/: im-gateway-design.md  prompt-caching-plan.md  subagent-team.md  troubleshooting.md
docs/learning/: 01-agent-core.md  02-tools.md  03-skills.md  04-providers.md  05-session-memory.md  06-entrypoints.md  README.md
docs/superpowers/plans/: 2026-07-01-cli-redesign.md
docs/superpowers/specs/: 2026-07-01-cli-redesign-design.md
skills/example/: SKILL.md
src/agent/: context.py  loop.py  memory.py  skills.py  subagent.py  team.py  tools.py  trace.py
src/agent/presets/: __init__.py  code_review_team.yaml  loader.py  research_team.yaml
src/cli/: __init__.py  app.py  banner.py  commands.py  completer.py  format.py  input.py  onboard.py  stream.py  theme.py
src/core/: state.py
src/gateway/: __init__.py  adapters.py  base.py  config.py  delivery.py  doctor.py  init.py  locks.py  router.py  runner.py  service.py  session_key.py  status.py  turn_queue.py
src/memory/: persistent.py
src/providers/: chat.py  llm.py
src/session/: events.py  models.py  search.py  service.py  store.py
src/tools/: __init__.py  bash_tool.py  compact_tool.py  delegate_tool.py  edit_file_tool.py  load_skill_tool.py  path_utils.py  read_file_tool.py  remember_tool.py  skill_writer_tool.py  team_tool.py  web_reader_tool.py  web_search_tool.py  write_file_tool.py
tests/: run_all.py  test_cache_stats_parsing.py  test_cache_warning_threshold.py  test_cli_cache_line.py  test_cli_terminal_ui.py  test_context_stability.py  test_gateway_core.py  test_long_conversation_cache.py  test_mock_team.py  test_phase6_thresholds.py  test_silent_compress_gating.py  test_streaming.py  test_subagent_team.py  test_verification_suite.py
tests/cli/: test_app.py  test_banner.py  test_commands.py  test_completer.py  test_format.py  test_input.py  test_onboard.py  test_stream.py  test_theme.py
